  - Improve description of emails retrieval from =IMAP= server with =Rmail=.
  - Disable adding a blank line before new heading/item in =org-mode=.
  - Adjust =pdf-view-mode= settings.
  - Use =gnus-summary-next-group-on-exit= default value of =t=.
  - Truncate long lines in =sql-interactive-mode=.
  - Move most of the UI settings from ~early-init.el~ to ~configs/init-ui.el~.

*** Removed:
  - Do not enable =display-time-mode=.


** v2.1.0 - 2022-11-27

Usability improvements of the existing functionality, with an emphasis on:
- PHP and Rust programming,
- terminal emulator usage,
- org-mode text writing.

*** Added:
  - Hint how to complete email addresses.
  - Package =web-mode=.
  - Keybinding =M-s M-s= for ~M-x isearch-forward-thing-at-point~.
  - More abbrevs to ~configs/init-abbrevs.el~
  - Keybinding =f= to open =xref= definition in the same window.
  - Enable =recentf-mode=. Call with ~M-x recent-open*~.
  - Keybinding =C-c t s= to start terminal emulator.
  - Keybinding =C-c b w= to toggle =whitespace-mode=.
  - Keybinding =C-c l a= to call ~M-x eglot-code-actions~.
  - Configure ~diff-whitespace-style~ (since Emacs 29).
  - Add =racket-mode= package for [[https://racket-lang.org][Racket language]].

*** Changed:
  - Improve =rust-mode= usability.
  - Improve =php-mode= usability.
  - Improve editing and search usability.
  - Configure =xref= to use =ripgrep= when it's available.
  - Better =term-mode= usability.
  - Replace =global-goto-address-mode= by local enabling.
  - Swap =org-mode= default keybindings =RET= and =C-j=.
  - Improve =diff-mode= usability.

*** Removed:
  - Fallback =tab-always-indent= to its default value of =t=.
  - Disable =org-mode= bindings =M-<left>=, =M-<right>=, =M-<up>=, =M-<down>=.
  - Keybinding =C-c e d= in favor of more concise =C-c d=.


** v2.0.0 - 2022-04-07

Improved usability of everyday tasks in writing and programming, especially in
regard to:
- emails and mailing lists.
- programming: ELisp, PHP, CSS, HTML, Rust.