@@ -34,6 +34,7 @@
   - Use =gnus-summary-next-group-on-exit= default value of =t=.
   - Truncate long lines in =sql-interactive-mode=.
   - Move most of the UI settings from ~early-init.el~ to ~configs/init-ui.el~.
+  - Prefer user labels on =org-mode= export.
 
 *** Removed:
   - Do not enable =display-time-mode=.
